--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "entoj-js",
-  "version": "0.1.0",
-  "private": true,
-  "engines": {
-    "node": "6.x"
-  },
-  "main": "source/index.js",
-  "scripts": {
-    "coverage": "bash scripts/test --coverage",
-    "coveralls": "bash scripts/coveralls",
-    "lint": "bash scripts/lint",
-    "test": "bash scripts/test"
-  },
-  "dependencies": {
-    "entoj-system": "https://github.com/entoj/entoj-system",
-    "co": "*",
-    "co-fs-extra": "*",
-    "eslint": "*",
-    "uglify-js": "*"
-  },
-  "devDependencies": {
-    "chai": "*",
-    "coveralls": "*",
-    "git-changelog": "*",
-    "ink-docstrap": "*",
-    "istanbul": "*",
-    "jsdoc": "*",
-    "mocha": "*",
-    "entoj-test-fixture": "*"
-  }
+    "name": "entoj-js",
+    "version": "0.1.0",
+    "engines": {
+        "node": "6.x"
+    },
+    "main": "source/index.js",
+    "scripts": {
+        "coverage": "bash scripts/test --coverage",
+        "coveralls": "bash scripts/coveralls",
+        "lint": "bash scripts/lint",
+        "test": "bash scripts/test"
+    },
+    "dependencies": {
+        "co": "^4.6.0",
+        "co-fs-extra": "^1.2.1",
+        "entoj-system": "^0.1.0",
+        "eslint": "^4.1.1",
+        "uglify-js": "^3.0.23"
+    },
+    "devDependencies": {
+        "chai": "^4.0.2",
+        "coveralls": "^2.13.1",
+        "entoj-test-fixture": "^0.9.0",
+        "git-changelog": "^1.1.2",
+        "ink-docstrap": "^1.3.0",
+        "istanbul": "^0.4.5",
+        "jsdoc": "^3.4.3",
+        "mocha": "^3.4.2"
+    }
 }
