--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "entoj-js",
   "version": "0.1.5",
   "engines": {
-    "node": "6.x"
+    "node": ">= 6.x"
   },
   "main": "source/index.js",
   "scripts": {
@@ -14,18 +14,16 @@
   "dependencies": {
     "co": "^4.6.0",
     "co-fs-extra": "^1.2.1",
-    "entoj-system": "^0.1.23",
-    "uglify-js": "^3.0.23"
+    "entoj-system": "^0.2.0",
+    "uglify-js": "^3.3.4"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "coveralls": "^2.13.3",
-    "entoj-test-fixture": "^0.9.5",
-    "eslint": "^4.10.0",
+    "entoj-test-fixture": "^0.9.6",
+    "eslint": "^4.14.0",
     "git-changelog": "^1.1.2",
-    "ink-docstrap": "^1.3.0",
     "istanbul": "^0.4.5",
-    "jsdoc": "^3.5.5",
     "mocha": "^3.5.3"
   }
 }
