--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "co": "^4.6.0",
     "co-fs-extra": "^1.2.1",
-    "entoj-system": "^0.2.0",
-    "uglify-js": "^3.3.4"
+    "entoj-system": "^0.2.13",
+    "supertest": "^3.0.0",
+    "uglify-js": "^3.3.4",
+    "vinyl": "^2.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
