--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "co": "^4.6.0",
     "co-fs-extra": "^1.2.1",
     "entoj-system": "^0.2.13",
-    "supertest": "^3.0.0",
-    "uglify-js": "^3.3.4",
-    "vinyl": "^2.1.0"
+    "uglify-js": "^3.3.10",
+    "vinyl": "^2.1.0",
+    "eslint": "^4.17.0"    
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "coveralls": "^2.13.3",
-    "entoj-test-fixture": "^0.9.6",
-    "eslint": "^4.14.0",
+    "entoj-test-fixture": "^0.9.9",
     "git-changelog": "^1.1.2",
     "istanbul": "^0.4.5",
+    "supertest": "^3.0.0",
     "mocha": "^3.5.3"
   }
 }
