--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "co": "^4.6.0",
     "co-fs-extra": "^1.2.1",
     "entoj-system": "^0.3.0",
-    "uglify-js": "^3.3.14",
-    "vinyl": "^2.1.0",
-    "eslint": "^4.18.2"
+    "eslint": "^4.19.1",
+    "uglify-js": "^3.3.16",
+    "vinyl": "^2.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
